Añadidas las nuevas noticias del día de los inocentes

--- a/index.html
+++ b/index.html
@@ -56,6 +56,25 @@
         <div class="main-menu" id="main-menu"></div>
         <div class="second-bar" id="second-bar"></div>
         <div class="content-container">
+            <div class="content-title" style="background-image: url('images/santosinocentes/runecabecera.jpg');">
+            <a class="content-title-text"><div class="background-title-text"><div>¡¿¿¿¡LaANNSAMOS LA trDusion de Renu Fectori cuatre!?</div></div></a>
+            </div>
+            <div class="content">
+                <p>¡Muy buenas a todos! ¡AL FIN FINALISAMOS LA TRADUSION DE RUNE FACTORY 4! ¡AL FINAL DESCARTAMOS TODOS LOS traductores BIEJOS Y LO HICIERON UN EQUIPO PRUFESIONAL DE BOTS, AQUI OS DEJO EL RESULTADO DE EL ARDUO TRABAJO</p><br>
+                <center><iframe width="80%" height="50%" src="https://www.youtube.com/embed/BdpnLW2icYw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center><br>
+                <center>
+                    <a class="boton_readtradu" href="https://goo.gl/KXpQUg">DESCARGAR</a>
+                </center>
+            </div>
+            <div class="content-title" style="background-image: url('images/santosinocentes/monikaglitch.png');">
+            <a class="content-title-text"><div class="background-title-text"><div>SDAFLSDFLKJDLAKJSDILWEJKLC,MASKLASDLKHSDLKHKLLKXZñjweñpowj</div></div></a>
+            </div>
+            <div class="content">
+                sdlkfjswfhsldfklsdkjflsdkjfclñsdkjfsdlñhioflsdfjlsdkjflsdifsdjflksdfjlzkdxc´ñasdkla´`pdiaqidykuashdfkasudgfjksdhgfsadijpasoduopasidyuhasjidlaskghkiagudioawdhoiAFLOAFHOASIDHFLAdk´`apidepqweykiqfbclkasdjdfphyuwgiqwughdelodehqiowhyd<br>foqwihdfoqiuegfroqweirjpoqwuiepqwioyheñpqwkejpqowuerpqodepqwi9rhyepqowiuiepqowue`pqwier`pqwouirpqoirqwiehjrqwjkodepoqiupwru
+                <center>
+                    <a class="boton_readmore" href="https://goo.gl/pvRrSg">Leer en GlowTranslations</a>
+                </center>
+            </div>
             <div class="content-title" style="background-image: url('articles/10-2018/glownovedades7_truco_o_novedades-31/images/top.jpg');">
             <a class="content-title-text"><div class="background-title-text"><div>GlowNovedades #7: ¡Truco o Novedades!</div></div></a>
             </div>
@@ -145,9 +164,9 @@
                 <div style="clear: both;"></div>
                 <div class="progress-title">Rune Factory 4</div>
                 <div class="wrap">
-                    <div class="progress-radial progress-55" style="background-color: #4f7cfe;">
+                    <div class="progress-radial progress-100" style="background-color: #4f7cfe;">
                         <div class="overlay"></div>
-                        <div class="text-overlay">TRAD: 55%</div>
+                        <div class="text-overlay">TRAD: 999%</div>
                     </div>
                 </div>
                 <div style="clear: both;"></div>
@@ -206,6 +225,7 @@
                     <a href="http://www.gradienwords.tk/"><img style="margin-top: 10px; margin-bottom: 10px;" onload="this.style.opacity='1';" src="images/friends/gradien.png"></a>
                     <a href="http://traduccionesxt.blogspot.com.es/"><img style="margin-top: 10px; margin-bottom: 10px;" onload="this.style.opacity='1';" src="images/friends/tradusXT.png"></a>
                     <a href="https://crimsontranslations.weebly.com/"><img style="margin-top: 10px; margin-bottom: 10px;" onload="this.style.opacity='1';" src="images/friends/crimson.png"></a>
+                    <a href="https://www.muyhistoria.es/curiosidades/preguntas-respuestas/ipor-que-se-celebra-el-dia-de-los-santos-inocentes-el-28-de-diciembre"><img onload="this.style.opacity=1" src="http://3.bp.blogspot.com/-NGPYfeYZV4M/TvpJAIZDvcI/AAAAAAAABik/qthNT10QXt0/s1600/inocente1.gif"></a>
                 </div>
             </div>
         </div>
