Añadida la noticia de diciembre de 2018

--- a/index.html
+++ b/index.html
@@ -56,6 +56,17 @@
         <div class="main-menu" id="main-menu"></div>
         <div class="second-bar" id="second-bar"></div>
         <div class="content-container">
+          <div class="content-title" style="background-image: url('articles/12-2018/bromasyavances-29/images/top.jpg');">
+          <a class="content-title-text"><div class="background-title-text"><div>¡Bromas navideñas y avances sobre nuestros proyectos!</div></div></a>
+          </div>
+          <div class="content">
+            ¡Buenas a todos! Lo primero de todo, ¡Feliz navidad! Y lo segundo, menudo sorpresón os dimos ayer con el lanzamiento de la traducción de Rune Factory 5, eh. Nadie se lo esperaba xD.<br />
+            Pero bueno, para los que aún no lo sepan, ayer, día 28 de diciembre de 2018, fue el día de los santos inocentes en España, donde...<br /><br />
+            <center>
+                <a class="boton_readmore" href="articles/12-2018/bromasyavances-29/bromasyavances.html">Leer en GlowTranslations</a>
+                <a class="boton_readtradu" href="https://tradusquare.es/entrada.php?Bromas-navidenas-y-avances-sobre-nuestros-proyectos">Leer en TraduSquare</a>
+            </center>
+          </div>
             <div class="content-title" style="background-image: url('articles/10-2018/glownovedades7_truco_o_novedades-31/images/top.jpg');">
             <a class="content-title-text"><div class="background-title-text"><div>GlowNovedades #7: ¡Truco o Novedades!</div></div></a>
             </div>
@@ -100,16 +111,6 @@
                 Pero al fin hemos acabado y queremos que...<br><br>
                 <center>
                     <a class="boton_readtradu" href="https://tradusquare.es/entrada.php?GlowTranslations-Liberamos-la-traduccion-de-Lord-of-Magna-Maiden-Heaven-al-espanol">Leer en TraduSquare</a>
-                </center>
-            </div>
-            <div class="content-title" style="background-image: url('articles/04-2018/GlowNovedades5-01/images/top.jpg');"><a class="content-title-text"><div class="background-title-text"><div>GlowNovedades #5: ¡Avances de todos nuestros proyectos!</div></div></a></div>
-            <div class="content">
-                <b>¡Buenas a todos!</b> ¡Por fin han llegado las <b>GlowNovedades #5 y tenemos muchísimo que contaros :D!</b><br>
-                Para comenzar, <b>recientemente hemos cumplido 2 años ^^</b><br><br>
-                <p style="text-align:center"><img onload="this.style.opacity='1';" src="articles/04-2018/GlowNovedades5-01/images/birthday.jpg" /></p><br><br>
-                Ha pasado mucho tiempo la verdad, desde que originalmente nos juntamos un grupito en skype para traducir un vídeo juego llamado Stella Glow y estábamos solo comentado los avances...<br><br>
-                <center>
-                    <a class="boton_readtradu" href="https://tradusquare.es/entrada.php?GlowNovedades-5-Avances-de-todos-nuestros-proyectos">Leer en TraduSquare</a>
                 </center>
             </div>
         </div>
