Listado de miembros actualizado

--- a/miembros.html
+++ b/miembros.html
@@ -93,16 +93,11 @@ window.cookieconsent.initialise({
 					<div class="member-name" style="background-color: #bf3da5;">Erena</div>
 					<div class="member-desc">Traductora<br>Correctora</div>
 				</div>
-				<div class="member-container"style="background: linear-gradient(to bottom, rgba(84,255,144,1) 0%, rgba(128,248,137,1) 25%, rgba(246,228,116,1) 92%, rgba(255,227,115,1) 97%);">
+				<!--<div class="member-container"style="background: linear-gradient(to bottom, rgba(84,255,144,1) 0%, rgba(128,248,137,1) 25%, rgba(246,228,116,1) 92%, rgba(255,227,115,1) 97%);">
 					<div class="member-avatar" style="background-image: url('images/avatars/Vanille.jpg')"></div>
 					<div class="member-name" style="background-color: #1d8708;">Vanille</div>
 					<div class="member-desc">Traductora<br>Correctora</div>
-				</div>
-				<div class="member-container"style="background: linear-gradient(to bottom, rgba(252,236,252,1) 0%, rgba(253,137,215,1) 51%, rgba(255,124,216,1) 100%);">
-					<div class="member-avatar" style="background-image: url('images/avatars/Azu.jpg')"></div>
-					<div class="member-name" style="background-color: #b5c200;">Azu</div>
-					<div class="member-desc">Traductora<br>Correctora</div>
-				</div>
+				</div>-->
 				<div class="member-container"style="background: linear-gradient(to bottom, rgba(9,0,255,1) 0%, rgba(15,255,223,1) 51%, rgba(204,255,0,1) 100%);">
 					<div class="member-avatar" style="background-image: url('images/avatars/Sonicus.png')"></div>
 					<div class="member-name" style="background-color: #047364;">Sonicus</div>
