--- a/translations/persona4/miembros.html
+++ b/translations/persona4/miembros.html
@@ -73,12 +73,6 @@ window.cookieconsent.initialise({
 					</div>
 				</div>
 				<div class="credits-container">
-					<div class="credits-name">Azu</div>
-					<div class="credits-avatar">
-						<img onload="this.style.opacity='1';" src="../../images/avatars/Azu.jpg" style="width: 100px; height: 100px;">
-					</div>
-				</div>
-				<div class="credits-container">
 					<div class="credits-name">Sorium</div>
 					<div class="credits-avatar">
 						<img onload="this.style.opacity='1';" src="../../images/avatars/Sorium.jpeg" style="width: 100px; height: 100px;">
@@ -99,9 +93,9 @@ window.cookieconsent.initialise({
 				<div style="clear: both;"></div>
 				<div class="title"><h1>Corrección</h1></div>
 				<div class="credits-container">
-					<div class="credits-name">Azu</div>
+					<div class="credits-name">Shiryu</div>
 					<div class="credits-avatar">
-						<img onload="this.style.opacity='1';" src="../../images/avatars/Azu.jpg" style="width: 100px; height: 100px;">
+						<img onload="this.style.opacity='1';" src="../../images/avatars/shiryu.jpg" style="width: 100px; height: 100px;">
 					</div>
 				</div>
 				<div class="credits-container">
