--- a/translations/runefactory4/miembros.html
+++ b/translations/runefactory4/miembros.html
@@ -98,24 +98,12 @@ window.cookieconsent.initialise({
 						<img onload="this.style.opacity='1';" src="../../images/avatars/Sonicus.png" style="width: 100px; height: 100px;">
 					</div>
 				</div>
-				<div class="credits-container">
-					<div class="credits-name">Azu</div>
-					<div class="credits-avatar">
-						<img onload="this.style.opacity='1';" src="../../images/avatars/Azu.jpg" style="width: 100px; height: 100px;">
-					</div>
-				</div>
-				<div class="credits-container">
+				<!--<div class="credits-container">
 					<div class="credits-name">Vanille</div>
 					<div class="credits-avatar">
 						<img onload="this.style.opacity='1';" src="../../images/avatars/Vanille.jpg" style="width: 100px; height: 100px;">
 					</div>
-				</div>
-				<div class="credits-container">
-					<div class="credits-name">Nex</div>
-					<div class="credits-avatar">
-						<img onload="this.style.opacity='1';" src="../../images/avatars/nex.jpg" style="width: 100px; height: 100px;">
-					</div>
-				</div>
+				</div>-->
 				<div class="credits-container">
 					<div class="credits-name">Roli300</div>
 					<div class="credits-avatar">
@@ -130,18 +118,12 @@ window.cookieconsent.initialise({
 						<img onload="this.style.opacity='1';" src="../../images/avatars/Jesa.jpg" style="width: 100px; height: 100px;">
 					</div>
 				</div>
-				<div class="credits-container">
+				<!--<div class="credits-container">
 					<div class="credits-name">Vanille</div>
 					<div class="credits-avatar">
 						<img onload="this.style.opacity='1';" src="../../images/avatars/Vanille.jpg" style="width: 100px; height: 100px;">
 					</div>
-				</div>
-				<div class="credits-container">
-					<div class="credits-name">Azu</div>
-					<div class="credits-avatar">
-						<img onload="this.style.opacity='1';" src="../../images/avatars/Azu.jpg" style="width: 100px; height: 100px;">
-					</div>
-				</div>
+				</div>-->
 				<div style="clear: both;"></div>
 				<div class="title"><h1>Editores gráficos</h1></div>
 				<div class="credits-container">
@@ -159,6 +141,12 @@ window.cookieconsent.initialise({
 					</div>
 				</div>
 				<div class="credits-container">
+					<div class="credits-name">Vanille</div>
+					<div class="credits-avatar">
+						<img onload="this.style.opacity='1';" src="../../images/avatars/Vanille.jpg" style="width: 100px; height: 100px;">
+					</div>
+				</div>
+				<div class="credits-container">
 					<div class="credits-name">Sany</div>
 					<div class="credits-avatar">
 						<img onload="this.style.opacity='1';" src="../../images/avatars/Sany.jpg" style="width: 100px; height: 100px;">
@@ -172,6 +160,20 @@ window.cookieconsent.initialise({
 						<img onload="this.style.opacity='1';" src="../../images/avatars/Hotaru.jpg" style="width: 100px; height: 100px;">
 					</div>
 					<div class="credits-desc">Por las herramientas nuevas para la traducción.</div>
+				</div>
+				<div class="credits-container">
+					<div class="credits-name">Azu</div>
+					<div class="credits-avatar">
+						<img onload="this.style.opacity='1';" src="../../images/avatars/Azu.jpg" style="width: 100px; height: 100px;">
+					</div>
+					<div class="credits-desc">Traducción inicial.</div>
+				</div>
+				<div class="credits-container">
+					<div class="credits-name">Nex</div>
+					<div class="credits-avatar">
+						<img onload="this.style.opacity='1';" src="../../images/avatars/nex.jpg" style="width: 100px; height: 100px;">
+					</div>
+					<div class="credits-desc">Traducción inicial.</div>
 				</div>
 				<div class="credits-container">
 					<div class="credits-name">Sorium</div>
