Listado de miembros de glowtranslations actualizada

--- a/miembros.html
+++ b/miembros.html
@@ -108,6 +108,11 @@ window.cookieconsent.initialise({
 					<div class="member-name" style="background-color: #00708f;">Mistergamer</div>
 					<div class="member-desc">Traductor</div>
 				</div>
+				<div class="member-container"style="background: linear-gradient(to right, #cb60b3 0%, #ad1283 50%, #de47ac 100%);">
+					<div class="member-avatar" style="background-image: url('images/avatars/roli.png')"></div>
+					<div class="member-name" style="background-color: #fccd4d;">Roli300</div>
+					<div class="member-desc">Traductor</div>
+				</div>
 				<div style="clear: both;"></div>
 			</div>
 		</div>
