:muscle: Actualizados los progresos del NOA

--- a/translations/nightsofazure/progresos.html
+++ b/translations/nightsofazure/progresos.html
@@ -59,29 +59,33 @@ window.cookieconsent.initialise({
 			<div class="content">
 				<p style="display: block; text-align: center; font-size: 24px; text-shadow: 1px 1px 2px rgba(0,0,0,0.5);">Estado actual del proyecto: En proceso de traducción</p>
 				<a>Historia</a>
-				<div class="progress" style="height:40px; margin-bottom: 5%;">
-				    <div class="progress-bar progress-bar-striped progress-bar-animated" style="width:35%">5%</div>
-				  </div>
-				<a>Entorno</a>
 				<div class="progress" style="height:40px; margin-bottom: 3%;">
+				    <div class="progress-bar progress-bar-striped progress-bar-animated" style="width:5%">5%</div>
+				  </div>
+				<a>Misiones</a>
+				<div class="progress" style="height:40px; margin-bottom: 3%;">
+						<div class="progress-bar progress-bar-striped progress-bar-animated" style="width:0%">0%</div>
+					</div>
+				<a>DLC</a>
+						<div class="progress" style="height:40px; margin-bottom: 3%;">
+						<div class="progress-bar progress-bar-striped progress-bar-animated" style="width:0%">0%</div>
+					</div>
+				<a>Habilidades</a>
+						<div class="progress" style="height:40px; margin-bottom: 3%;">
+						<div class="progress-bar progress-bar-striped progress-bar-animated" style="width:40%">40%</div>
+					</div>
+				<a>Objetos y equipamiento</a>
+						<div class="progress" style="height:40px; margin-bottom: 3%;">
+						<div class="progress-bar progress-bar-striped progress-bar-animated" style="width:30%">30%</div>
+					</div>
+				<a>Servans</a>
+					<div class="progress" style="height:40px; margin-bottom: 3%;">
+					<div class="progress-bar progress-bar-striped progress-bar-animated" style="width:25%">25%</div>
+				</div>
+				<a>Gráficos</a>
+						<div class="progress" style="height:40px; margin-bottom: 3%;">
 						<div class="progress-bar progress-bar-striped progress-bar-animated" style="width:5%">5%</div>
 					</div>
-				<a>Vínculos con los Servans</a>
-						<div class="progress" style="height:40px; margin-bottom: 3%;">
-						<div class="progress-bar progress-bar-striped progress-bar-animated" style="width:10%">10%</div>
-					</div>
-					<a>Objetos y equipo</a>
-							<div class="progress" style="height:40px; margin-bottom: 3%;">
-							<div class="progress-bar progress-bar-striped progress-bar-animated" style="width:10%">10%</div>
-						</div>
-					<a>Compendio de demonios y servans</a>
-							<div class="progress" style="height:40px; margin-bottom: 3%;">
-							<div class="progress-bar progress-bar-striped progress-bar-animated" style="width:0%">0%</div>
-						</div>
-					<a>Gráficos</a>
-							<div class="progress" style="height:40px; margin-bottom: 3%;">
-							<div class="progress-bar progress-bar-striped progress-bar-animated bg-success" style="width:100%">100%</div>
-						</div>
    </div>
 		</div>
 		<div style="height:100px;"></div>
