--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <!--<a href="https://t.me/GlowTranslations"><img src="images/telegram.png" onload="this.style.opacity='1';"></a><br>-->
             </div>
         </div>
-        <div class="module" style="margin-top: 10px;">
+        <!--<div class="module" style="margin-top: 10px;">
             <div class="content-container-widgets">
                 <div class="module-title-background" style="background-image: url('images/progress-banner.jpg');">
                     <div class="content-title-widget">Progresos</div>
@@ -169,7 +169,7 @@
                 </div>
                 <div style="clear: both;"></div>
             </div>
-        </div>
+        </div>-->
         <div class="module" style="margin-top: 10px;">
             <div class="content-container-widgets">
                 <div class="module-title-background" style="background-image: url('images/discord-banner.jpg');">
@@ -183,7 +183,7 @@
                 <div class="module-title-background" style="background-image: url('images/question-banner.jpg');">
                     <div class="content-title-widget">Encuesta</div>
                 </div>
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdV3clHTHWw_hYSioLgMu98Zdrs4a93TEnrwKas66Bu89MMlw/viewform?embedded=true" width="100%" height="398" frameborder="0" marginheight="0" marginwidth="0">Cargando...</iframe>            </div>
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf2VkkQfqLdslIDTaHoDCXbhy6a1Qvzme8C9z5Dhv5paVr0qg/viewform?embedded=true" width="100%" height="398" frameborder="0" marginheight="0" marginwidth="0">Cargando...</iframe>            </div>
         </div>
         <div class="module" style="margin-top: 10px;">
             <div class="content-container-widgets">
