:pizza: Actualizada la info de last bible

--- a/translations/lastbible/informacion.html
+++ b/translations/lastbible/informacion.html
@@ -60,7 +60,9 @@ window.cookieconsent.initialise({
     <img onload="this.style.opacity='1';" src="../../images/lb-info.png" style="float: right; margin-right: -30px;">
     Además de comenzar con la traducción de Nights Of Azure, nos embarcamos en la traducción de uno de los rpgs de Megami Tensei que salió para Game Boy color, Megami Tensei Gaiden: Last Bible. <br>
     Megami Tensei Gaiden: Last Bible, salió en Game Boy el 25 de diciembre en 1992 en Japón y en 27 de agosto de 1999 lo lanzaron en territorio americano bajo el nombre de Revelations: Demon Slayer y ahora, el 2 de Marzo de 2019, comienza su traducción al español. <br><br>
-    <div class="title"><h1>¿Habrá Demo como en el Stella Glow?</h1></div>
+    Esta traducción es un proyecto que en el que colabora TraduSquare con el Proyecto Amala.<br>
+	  <center><a href="https://tradusquare.es/"><img style="width: 280px; height: 140px; text-align: center;" onload="this.style.opacity='1';" src="../../images/tradusquare.png" ></a></center>
+    <div class="title"><h1>¿Habrá Demo?</h1></div>
     Siendo un juego de Game Boy Color, es imposible que haya una demo de este juego, por lo que no podemos distribuir una.<br>
     <div class="title"><h1>¿Cuánto durará la traducción?</h1></div>
     El otro día llamamos al servicio técnico de nuestra bola de cristal; la suya también esta estropeada y no son capaces de predecir cuándo vendrán a arreglar la nuestra. Así pues, solo podemos decir que la traducción estará tan pronto como la terminemos: tres meses, un año, una década… No lo sabemos, pero lo que sí sabemos es que cuanta más gente ayude, antes estará :P<br>
