:zzz: Actualizado el apartado de Rune

--- a/translations/runefactory4/miembros.html
+++ b/translations/runefactory4/miembros.html
@@ -110,6 +110,12 @@ window.cookieconsent.initialise({
 						<img onload="this.style.opacity='1';" src="../../images/avatars/roli.png" style="width: 100px; height: 100px;">
 					</div>
 				</div>
+				<div class="credits-container">
+					<div class="credits-name">Cinder</div>
+					<div class="credits-avatar">
+						<img onload="this.style.opacity='1';" src="../../images/avatars/Cinder.jpg" style="width: 100px; height: 100px;">
+					</div>
+				</div>
 				<div style="clear: both;"></div>
 				<div class="title"><h1>Corrección</h1></div>
 				<div class="credits-container">
