--- a/translations/runefactory4/progresos.html
+++ b/translations/runefactory4/progresos.html
@@ -57,7 +57,7 @@ window.cookieconsent.initialise({
 		<div class="content-container-translations">
 			<div class="content-title-post" style="background-image: url('imageheader/progres.jpg');"><a class="content-title-text"><div class="background-title-text"><div>Progresos</div></div></a></div>
 			<div class="content">
-				<p style="display: block; text-align: center; font-size: 24px; text-shadow: 1px 1px 2px rgba(0,0,0,0.5);">Estado actual del proyecto: En proceso de traducción</p>
+				<p style="display: block; text-align: center; font-size: 24px; text-shadow: 1px 1px 2px rgba(0,0,0,0.5);">Estado actual del proyecto: Pausado</p>
 				<a>Archivo principal (Historia, conversaciones y algunos textos del sistema)</a>
 				<div class="progress" style="height:40px; margin-bottom: 3%;">
 				    <div class="progress-bar progress-bar-striped progress-bar-animated" style="width:31%">31%</div>
