--- a/translations/runefactory4/informacion.html
+++ b/translations/runefactory4/informacion.html
@@ -57,7 +57,11 @@ window.cookieconsent.initialise({
 		<div class="content-container-translations">
 			<div class="content-title-post" style="background-image: url('imageheader/info.jpg');"><a class="content-title-text"><div class="background-title-text"><div>¡Rune Factory 4 en español!</div></div></a></div>
 			<div class="content">
-    <img onload="this.style.opacity='1';" src="../../images/rune-info.png" style="float: right">
+		<img onload="this.style.opacity='1';" src="../../images/rune-info.png" style="float: right">
+		
+		<p style="text-align: center; font-size: 24px; font-weight: bold; text-decoration: underline;">AVISO: El proyecto está pausado, para más información, visita este <a href="#">link</a></p>
+
+
     Como ya hemos acabado el proyecto de Stella Glow, nos ponemos manos a la obra con otro, que es un juego que seguro que a mucha gente le gustaría jugar en español:  <br>
 	Rune Factory 4. Rune Factory es una saga de videojuegos de Nintendo que ha hecho su última aparición en Nintendo 3DS. <br><br>
 	<!--Ya lo tenemos todo listo para empezar, solo le tenemos que echar valor y al toro, pero no nos vendría mal algo de apoyo para traducirlo lo antes posible, asi que si te ves ganas... <br>
