:squirrel: Fix tipo

--- a/translations/nightsofazure/informacion.html
+++ b/translations/nightsofazure/informacion.html
@@ -60,7 +60,7 @@ window.cookieconsent.initialise({
     <img onload="this.style.opacity='1';" src="../../images/noa-info.png" style="float: right; margin-right: -30px;">
     Comienza 2019 y queremos continuar tras la pausa de la traducción de Rune Factory 4. Por ello, empezamos con la traducción de uno de los mejores ARPG de Gust: Nights Of Azure. <br>
     Nights Of Azure, salió en PS3 y PS Vita el 1 de Octubre en 2015 en Japón y entre 2016 y 2017 salió la versión de PC y PS4 en todo el mundo y ahora, el 2 de Marzo de 2019, comienza su traducción al español.   <br><br>
-    <div class="title"><h1>¿Habrá Demo como en el Stella Glow?</h1></div>
+    <div class="title"><h1>¿Habrá Demo?</h1></div>
     Siendo un juego de PC, normalmente hay demos que se distribuyan de manera gratuita, pero, por desgracia, este juego no contiene una demo así que no podemos distribuir una demo traducida.<br>
     <div class="title"><h1>¿Cuánto durará la traducción?</h1></div>
     El otro día llamamos al servicio técnico de nuestra bola de cristal; la suya también esta estropeada y no son capaces de predecir cuándo vendrán a arreglar la nuestra. Así pues, solo podemos decir que la traducción estará tan pronto como la terminemos: tres meses, un año, una década… No lo sabemos, pero lo que sí sabemos es que cuanta más gente ayude, antes estará :P<br>
