:sparkles: Actualizado el listado de miembros

--- a/miembros.html
+++ b/miembros.html
@@ -63,11 +63,12 @@ window.cookieconsent.initialise({
 					<div class="member-name "style="background: #1f3b08; opacity: 0.9;">Darkmet</div>
 					<div class="member-desc">Traductor<br>RomHacker<br>Betatester<br>Editor gráfico<br>WebMaster</div>
 				</div>
-				<div class="member-container"style="background: linear-gradient(to bottom, rgba(255,175,75,1) 0%, rgba(255,146,10,1) 100%);">
+				<!--Llevas sin aparecer mas de un año xD
+					<div class="member-container"style="background: linear-gradient(to bottom, rgba(255,175,75,1) 0%, rgba(255,146,10,1) 100%);">
 					<div class="member-avatar" style="background-image: url('images/avatars/Xppancho.jpg')"></div>
 					<div class="member-name "style="background: #b06a00; opacity: 0.9;">Xppancho</div>
 					<div class="member-desc">Traductor<br>Corrector<br>Betatester</div>
-				</div>
+				</div>-->
 				<div class="member-container"style="background: linear-gradient(to bottom, rgba(8,0,122,1) 0%, rgba(71,3,135,1) 49%, rgba(38,0,82,1) 100%);;">
 					<div class="member-avatar" style="background-image: url('images/avatars/Sorium.jpeg')"></div>
 					<div class="member-name" style="background-color: #6000bf;">Sorium</div>
@@ -111,7 +112,12 @@ window.cookieconsent.initialise({
 				<div class="member-container"style="background: linear-gradient(to right, #cb60b3 0%, #ad1283 50%, #de47ac 100%);">
 					<div class="member-avatar" style="background-image: url('images/avatars/roli.png')"></div>
 					<div class="member-name" style="background-color: #fccd4d;">Roli300</div>
-					<div class="member-desc">Traductor</div>
+					<div class="member-desc" style="color: white;">Traductor</div>
+				</div>
+				<div class="member-container"style="background: linear-gradient(to top, #ff3019 0%, #cf0404 100%);">
+					<div class="member-avatar" style="background-image: url('images/avatars/Cinder.jpg')"></div>
+					<div class="member-name" style="background-color: #EF8E17;">Cinder</div>
+					<div class="member-desc" style="color: white;">Traductora<br>Correctora</div>
 				</div>
 				<div style="clear: both;"></div>
 			</div>
