--- a/miembros.html
+++ b/miembros.html
@@ -74,16 +74,19 @@ window.cookieconsent.initialise({
 					<div class="member-name" style="background-color: #6000bf;">Sorium</div>
 					<div class="member-desc" style="color: white;">Traductor<br>Betatester</div>
 				</div>
-				<div class="member-container"style="background:  linear-gradient(to bottom, rgba(255,93,177,1) 0%, rgba(239,1,124,1) 100%);">
+				<!--
+					<div class="member-container"style="background:  linear-gradient(to bottom, rgba(255,93,177,1) 0%, rgba(239,1,124,1) 100%);">
 					<div class="member-avatar" style="background-image: url('images/avatars/Sany.jpg')"></div>
 					<div class="member-name" style="background-color: #c400b7;">Sany</div>
-					<div class="member-desc" style="color: white;">Corrector<br>Redactora</div> <!-- Si, esta puesto así a propósito -->
+					<div class="member-desc" style="color: white;">Corrector<br>Redactora</div>  Si, esta puesto así a propósito
 				</div>
 				<div class="member-container"style="background: linear-gradient(to bottom, rgba(255,79,217,1) 0%, rgba(235,0,168,1) 51%, rgba(255,54,188,1) 100%);">
 					<div class="member-avatar" style="background-image: url('images/avatars/Hec17.jpg')"></div>
 					<div class="member-name" style="background-color: #a400ad;">Hec17</div>
 					<div class="member-desc" style="color: white;">Traductor</div>
 				</div>
+					Cuando decidais trabajar de nuevo pinches vagos os meto de nuevo
+				-->
 				<div class="member-container"style="background: linear-gradient(to bottom, rgba(210,255,82,1) 0%, rgba(206,255,161,1) 100%);">
 					<div class="member-avatar" style="background-image: url('images/avatars/Jesa.jpg')"></div>
 					<div class="member-name" style="background-color: #00a822;">Jesa</div>
@@ -117,7 +120,7 @@ window.cookieconsent.initialise({
 				<div class="member-container"style="background: linear-gradient(to top, #ff3019 0%, #cf0404 100%);">
 					<div class="member-avatar" style="background-image: url('images/avatars/Cinder.jpg')"></div>
 					<div class="member-name" style="background-color: #EF8E17;">Cinder</div>
-					<div class="member-desc" style="color: white;">Traductora<br>Correctora</div>
+					<div class="member-desc" style="color: white;">Traductora<br/>Correctora<br/>Betatester</div>
 				</div>
 				<div style="clear: both;"></div>
 			</div>
