:smile: Actualizado la ficha del NOA, y reorganizado los anuncios

--- a/translations/nightsofazure/galeria.html
+++ b/translations/nightsofazure/galeria.html
@@ -67,9 +67,9 @@ window.cookieconsent.initialise({
 	<img onload="this.style.opacity='1';" src="gallery/5.jpg" />
 	<img onload="this.style.opacity='1';" src="gallery/6.jpg" />
 	<img onload="this.style.opacity='1';" src="gallery/7.jpg" />
+	<img onload="this.style.opacity='1';" src="gallery/8.jpg" />
+	<img onload="this.style.opacity='1';" src="gallery/9.jpg" />
 </div>
-<center><iframe width="890" height="512" src="https://www.youtube.com/embed/ajmh-K9_Qcs" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe><br><br>
-<iframe width="890" height="512" src="https://www.youtube.com/embed/hxQ27L_OmFA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></center>
 			</div>
 		</div>
 		<div style="height:100px;"></div>
