--- a/translations/nightsofazure/miembros.html
+++ b/translations/nightsofazure/miembros.html
@@ -57,17 +57,11 @@ window.cookieconsent.initialise({
 			<div class="content-title-post" style="background-image: url('imageheader/credits.jpg');"><a class="content-title-text"><div class="background-title-text"><div>Miembros de la traducción</div></div></a></div>
 			<div class="content">
 				Aquí están todos aquellos que están llevando un papel importante en la traducción de Nights Of Azure al español.
-				<div class="title"><h1>Líderes del proyecto</h1></div>
+				<div class="title"><h1>Líder del proyecto</h1></div>
 				<div class="credits-container">
 					<div class="credits-name">Sorium</div>
 					<div class="credits-avatar">
 						<img onload="this.style.opacity='1';" src="../../images/avatars/Sorium.jpeg" style="width: 100px; height: 100px;">
-					</div>
-				</div>
-				<div class="credits-container">
-					<div class="credits-name">Jesa</div>
-					<div class="credits-avatar">
-						<img onload="this.style.opacity='1';" src="../../images/avatars/Jesa.jpg" style="width: 100px; height: 100px;">
 					</div>
 				</div>
 				<div style="clear: both;"></div>
