--- a/translations/lastbible/informacion.html
+++ b/translations/lastbible/informacion.html
@@ -58,7 +58,7 @@ window.cookieconsent.initialise({
 			<div class="content-title-post" style="background-image: url('imageheader/info.jpg');"><a class="content-title-text"><div class="background-title-text"><div>¡Megami Tensei Gaiden: Last Bible en español!</div></div></a></div>
 			<div class="content">
     <img onload="this.style.opacity='1';" src="../../images/lb-info.png" style="float: right; margin-right: -30px;">
-    Además de comenzar con la traducción de Nights Of Azure, nos embarcamos en la traducción de uno de los rpgs de Megami Tensei que salió para Game Boy color, Megami Tensei Gaiden: Last Bible. <br>
+    Comenzando 2019, nos embarcamos en la traducción de uno de los rpgs de Megami Tensei que salió para Game Boy color, Megami Tensei Gaiden: Last Bible. <br>
     Megami Tensei Gaiden: Last Bible, salió en Game Boy el 25 de diciembre en 1992 en Japón y en 27 de agosto de 1999 lo lanzaron en territorio americano bajo el nombre de Revelations: Demon Slayer y ahora, el 2 de Marzo de 2019, comienza su traducción al español. <br><br>
     Esta traducción es un proyecto que en el que colabora TraduSquare con el Proyecto Amala.<br>
 	  <center><a href="https://tradusquare.es/"><img style="width: 280px; height: 140px; text-align: center;" onload="this.style.opacity='1';" src="../../images/tradusquare.png" ></a></center>
