--- a/translations/lastbible/progresos.html
+++ b/translations/lastbible/progresos.html
@@ -90,7 +90,7 @@ window.cookieconsent.initialise({
 		</div>
 		<div style="height:100px;"></div>
 		<div class="footer" id="footer"></div>
-		<script src="../../js/menus.js" onload="mainMenu(), persona4SubMenu(), footer()"></script>
+		<script src="../../js/menus.js" onload="mainMenu(), lbSubMenu(), footer()"></script>
 	</div>
 </body>
 </html>
