:innocent: Añadida la segunda noticia

--- a/translations/runefactory4/informacion.html
+++ b/translations/runefactory4/informacion.html
@@ -59,7 +59,7 @@ window.cookieconsent.initialise({
 			<div class="content">
 		<img onload="this.style.opacity='1';" src="../../images/rune-info.png" style="float: right">
 		
-		<p style="text-align: center; font-size: 24px; font-weight: bold; text-decoration: underline;">AVISO: El proyecto está pausado, para más información, visita este <a href="#">link</a></p>
+		<p style="text-align: center; font-size: 24px; font-weight: bold; text-decoration: underline;">AVISO: El proyecto está pausado, para más información, visita este <a href="https://glowtranslations.tk/articles/03-2019/pausaderunefactory4-2/pausarunefactory4.html">link</a></p>
 
 
     Como ya hemos acabado el proyecto de Stella Glow, nos ponemos manos a la obra con otro, que es un juego que seguro que a mucha gente le gustaría jugar en español:  <br>
