:relaxed: Añadido el anuncio del noa

--- a/index.html
+++ b/index.html
@@ -56,6 +56,19 @@
         <div class="main-menu" id="main-menu"></div>
         <div class="second-bar" id="second-bar"></div>
         <div class="content-container">
+                <div class="content-title" style="background-image: url('articles/03-2019/anuncionightsofazure-2/images/top.jpg');">
+                    <a class="content-title-text"><div class="background-title-text"><div>¡Anunciamos el proyecto de traducción de Nights Of Azure!</div></div></a>
+                    </div>
+                    <div class="content">
+                            <p>¡Buenas a todos! Antes de nada, <strong>soy Sorium</strong>, ¡y espero poder publicar más por aquí! <o:p></o:p></p><p><strong>¡Hoy tengo por placer
+                                    el poder presentaros el segundo proyecto secreto que tenemos entre manos en
+                                    GlowTranslations!</strong></p><span style="font-size: 1rem;"></span><p><span style="font-size: 1rem;">Después de saber lo de Rune Factory 4 (si no os habéis
+                                    enterado os invito a que vayáis a leer el post que...</p><br>
+                        <center>
+                            <a class="boton_readmore" href="articles/03-2019/anuncionightsofazure-2/anuncionightsofazure.html">Leer en GlowTranslations</a>
+                            <a class="boton_readtradu" href="https://tradusquare.es/entrada.php?Anunciamos-el-proyecto-de-traduccion-de-Nights-of-Azure">Leer en TraduSquare</a>
+                        </center>
+                </div>
                 <div class="content-title" style="background-image: url('articles/03-2019/pausaderunefactory4-2/images/top.jpg');">
                     <a class="content-title-text"><div class="background-title-text"><div>¡Se pausa la traducción de Rune Factory 4!</div></div></a>
                     </div>
@@ -90,19 +103,6 @@
                             <a class="boton_readtradu" href="https://tradusquare.es/entrada.php?Anunciamos-el-proyecto-de-traduccion-de-Last-Bible">Leer en TraduSquare</a>
                         </center>
                     </div>
-        <!--<div class="content-title" style="background-image: url('articles/03-2019/anuncionightsofazure-2/images/top.jpg');">
-            <a class="content-title-text"><div class="background-title-text"><div>¡Anunciamos el proyecto de traducción de Nights Of Azure!</div></div></a>
-            </div>
-            <div class="content">
-                    <p>¡Buenas a todos! Antes de nada, <strong>soy Sorium</strong>, ¡y espero poder publicar más por aquí! <o:p></o:p></p><p><strong>¡Hoy tengo por placer
-                            el poder presentaros el segundo proyecto secreto que tenemos entre manos en
-                            GlowTranslations!</strong></p><span style="font-size: 1rem;"></span><p><span style="font-size: 1rem;">Después de saber lo de Rune Factory 4 (si no os habéis
-                            enterado os invito a que vayáis a leer el post que...</p><br>
-                <center>
-                    <a class="boton_readmore" href="articles/03-2019/anuncionightsofazure-2/anuncionightsofazure.html">Leer en GlowTranslations</a>
-                    <a class="boton_readtradu" href="https://tradusquare.es/entrada.php?Anunciamos-el-proyecto-de-traduccion-de-Nights-of-Azure">Leer en TraduSquare</a>
-                </center>
-        </div>-->
             <div class="content-title" style="background-image: url('articles/12-2018/bromasyavances-29/images/top.jpg');">
           <a class="content-title-text"><div class="background-title-text"><div>¡Bromas navideñas y avances sobre nuestros proyectos!</div></div></a>
           </div>
@@ -192,13 +192,13 @@
                 <iframe src="https://ptb.discordapp.com/widget?id=470110583149166595&theme=dark" width="100%" height="500" allowtransparency="true" frameborder="0"></iframe>
             </div>
         </div>
-        <!--<div class="module" style="margin-top: 10px;">
+        <div class="module" style="margin-top: 10px;">
             <div class="content-container-widgets">
                 <div class="module-title-background" style="background-image: url('images/question-banner.jpg');">
                     <div class="content-title-widget">Encuesta</div>
                 </div>
                 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf2VkkQfqLdslIDTaHoDCXbhy6a1Qvzme8C9z5Dhv5paVr0qg/viewform?embedded=true" width="100%" height="398" frameborder="0" marginheight="0" marginwidth="0">Cargando...</iframe>            </div>
-        </div>-->
+        </div>
         <div class="module" style="margin-top: 10px;">
             <div class="content-container-widgets">
                 <div class="module-title-background" style="background-image: url('images/twitter-banner.jpg');">
