--- a/translations/nightsofazure/miembros.html
+++ b/translations/nightsofazure/miembros.html
@@ -161,7 +161,7 @@ window.cookieconsent.initialise({
 		</div>
 		<div style="height:100px;"></div>
 		<div class="footer" id="footer"></div>
-		<script src="../../js/menus.js" onload="mainMenu(), persona4SubMenu(), footer()"></script>
+		<script src="../../js/menus.js" onload="mainMenu(), noaSubMenu(), footer()"></script>
 	</div>
 </body>
 </html>
