:yellow_heart: Añadido la noticia de Last Bible y actualizado los porcentajes

--- a/index.html
+++ b/index.html
@@ -56,13 +56,29 @@
         <div class="main-menu" id="main-menu"></div>
         <div class="second-bar" id="second-bar"></div>
         <div class="content-container">
+            <div class="content-title" style="background-image: url('articles/03-2019/lastbiblefasetesteo-25/images/top.jpg');">
+                    <a class="content-title-text"><div class="background-title-text"><div>¡Iniciamos la fase de testeo de Last Bible!</div></div></a>
+                    </div>
+                    <div class="content">
+                        <p>¡Muy buenas a todos! ¡Hoy os traigo noticias frescas
+                        sobre el proyecto de traducción de Last Bible!</p>
+
+                        <p>¡Ya hemos finalizado la traducción!</p>
+
+                        <p>Pero eso no es todo…</p>
+                            <br>
+                        <center>
+                            <a class="boton_readmore" href="articles/03-2019/lastbiblefasetesteo-25/last_bible_entra_en_fase_testeo.html">Leer en GlowTranslations</a>
+                            <a class="boton_readtradu" href="https://tradusquare.es/entrada.php?Iniciamos-la-fase-de-testeo-de-Last-Bible">Leer en TraduSquare</a>
+                        </center>
+                </div>
                 <div class="content-title" style="background-image: url('articles/03-2019/anuncionightsofazure-2/images/top.jpg');">
                     <a class="content-title-text"><div class="background-title-text"><div>¡Anunciamos el proyecto de traducción de Nights Of Azure!</div></div></a>
                     </div>
                     <div class="content">
-                            <p>¡Buenas a todos! Antes de nada, <strong>soy Sorium</strong>, ¡y espero poder publicar más por aquí! <o:p></o:p></p><p><strong>¡Hoy tengo por placer
+                            <p>¡Buenas a todos! Antes de nada, <strong>soy Sorium</strong>, ¡y espero poder publicar más por aquí!</p><p><strong>¡Hoy tengo por placer
                                     el poder presentaros el segundo proyecto secreto que tenemos entre manos en
-                                    GlowTranslations!</strong></p><span style="font-size: 1rem;"></span><p><span style="font-size: 1rem;">Después de saber lo de Rune Factory 4 (si no os habéis
+                                    GlowTranslations!</strong></p><p>Después de saber lo de Rune Factory 4 (si no os habéis
                                     enterado os invito a que vayáis a leer el post que...</p><br>
                         <center>
                             <a class="boton_readmore" href="articles/03-2019/anuncionightsofazure-2/anuncionightsofazure.html">Leer en GlowTranslations</a>
@@ -91,12 +107,12 @@
                         <p>¡Muy buenas! Hoy habrá tres anuncios importantes en
                             GlowTranslations. Yo haré el primero y el segundo, y el tercero lo hará mi
                             compañero Sorium.</p><p>En el <strong>primer
-                            anuncio</strong> del día, os quiero mostrar el proyecto en el que llevo trabajando con Cinder y Orden desde hace más de un mes: ¡<strong>la traducción al español castellano de Last Bible</strong>!</p><p><p">Este juego se desarrolló para la Game Boy en Japón en 1992 y
+                            anuncio</strong> del día, os quiero mostrar el proyecto en el que llevo trabajando con Cinder y Orden desde hace más de un mes: ¡<strong>la traducción al español castellano de Last Bible</strong>!</p><p>Este juego se desarrolló para la Game Boy en Japón en 1992 y
                             se llevó a territorio americano en 1999, con el nombre de <em>Revelations: Demon Slayer.</em>
                           
-                                  </p"></p>
+                                  </p>
                           
-                                  <p"><p>Se trata de un <strong>RPG
+                                    <p>Se trata de un <strong>RPG
                                   por turnos</strong> ambientado en...</p><br />
                         <center>
                             <a class="boton_readmore" href="articles/03-2019/anunciolastbible-2/anunciolastbible.html">Leer en GlowTranslations</a>
@@ -114,19 +130,6 @@
                 <a class="boton_readtradu" href="https://tradusquare.es/entrada.php?Bromas-navidenas-y-avances-sobre-nuestros-proyectos">Leer en TraduSquare</a>
             </center>
           </div>
-            <div class="content-title" style="background-image: url('articles/10-2018/glownovedades7_truco_o_novedades-31/images/top.jpg');">
-            <a class="content-title-text"><div class="background-title-text"><div>GlowNovedades #7: ¡Truco o Novedades!</div></div></a>
-            </div>
-            <div class="content">
-                ¡Muy buenas a todos! ¿Cómo os lo estáis pasando este Halloween? ¿A alguien se le ha ocurrido disfrazarse de algún personaje de Stella Glow, como Hilda?<br>
-				¿O de uno de Rune Factory 4, como Dolce? Si fuera así, escríbenos un tweet para ver el resultado :D<br><br>
-				Pero bueno, vamos al lío, que venimos cargaditos de novedades en estas GlowNovedades 7 :D<br>
-				<p style="text-align:center"><img onload="this.style.opacity='1';" style="width=100%; height=100%" src="https://glowtranslations.tk/articles/10-2018/glownovedades7_truco_o_novedades-31/images/vamos.png" /></p>
-                <center>
-                    <a class="boton_readmore" href="articles/10-2018/glownovedades7_truco_o_novedades-31/glownovedades7_truco_o_novedades.html">Leer en GlowTranslations</a>
-                    <a class="boton_readtradu" href="https://tradusquare.es/entrada.php?GlowNovedades-7-Truco-o-Novedades">Leer en TraduSquare</a>
-                </center>
-            </div>
         </div>
         <div class="module">
             <div class="content-container-widgets">
