--- a/translations/lastbible/progresos.html
+++ b/translations/lastbible/progresos.html
@@ -57,30 +57,30 @@ window.cookieconsent.initialise({
 		<div class="content-container-translations">
 			<div class="content-title-post" style="background-image: url('imageheader/progress.jpg');"><a class="content-title-text"><div class="background-title-text"><div>Progresos</div></div></a></div>
 			<div class="content">
-				<p style="display: block; text-align: center; font-size: 24px; text-shadow: 1px 1px 2px rgba(0,0,0,0.5);">Estado actual del proyecto: En proceso de traducción</p>
+				<p style="display: block; text-align: center; font-size: 24px; text-shadow: 1px 1px 2px rgba(0,0,0,0.5);">Estado actual del proyecto: En proceso de testeo</p>
 				<a>Bloque 1 (Menús, historia, conversaciones de los monstruos, npc...)</a>
 				<div class="progress" style="height:40px; margin-bottom: 3%;">
-				    <div class="progress-bar progress-bar-striped progress-bar-animated" style="width:90%">90%</div>
+				    <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" style="width:100%">100%</div>
 				  </div>
 				<a>Bloque 2 (Historia)</a>
 				<div class="progress" style="height:40px; margin-bottom: 3%;">
-						<div class="progress-bar progress-bar-striped progress-bar-animated" style="width:60%">60%</div>
+						<div class="progress-bar progress-bar-striped progress-bar-animated bg-success" style="width:100%">100%</div>
 					</div>
 				<a>Bloque 3 (Historia, localizaciones y npc)</a>
 						<div class="progress" style="height:40px; margin-bottom: 3%;">
-						<div class="progress-bar progress-bar-striped progress-bar-animated" style="width:40%">40%</div>
+						<div class="progress-bar progress-bar-striped progress-bar-animated bg-success" style="width:100%">100%</div>
 					</div>
 					<a>Bloque 4 (Historia, localizaciones, menús y npc)</a>
 						<div class="progress" style="height:40px; margin-bottom: 3%;">
-						<div class="progress-bar progress-bar-striped progress-bar-animated" style="width:100%">100%</div>
+						<div class="progress-bar progress-bar-striped progress-bar-animated bg-success" style="width:100%">100%</div>
 					</div>
 					<a>Objetos y equipo</a>
 							<div class="progress" style="height:40px; margin-bottom: 3%;">
-							<div class="progress-bar progress-bar-striped progress-bar-animated" style="width:60%">60%</div>
+							<div class="progress-bar progress-bar-striped progress-bar-animated bg-success" style="width:100%">100%</div>
 						</div>
 					<a>Compendio de monstruos</a>
 							<div class="progress" style="height:40px; margin-bottom: 3%;">
-							<div class="progress-bar progress-bar-striped progress-bar-animated" style="width:50%">50%</div>
+							<div class="progress-bar progress-bar-striped progress-bar-animated bg-success" style="width:100%">100%</div>
 						</div>
 					<a>Gráficos</a>
 							<div class="progress" style="height:40px; margin-bottom: 3%;">
